{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 237,
  "lineage": "312be3a3-5ab8-c7db-4c4d-2b7e22c8036b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress-allow-gke-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "9443",
                  "10250",
                  "15017",
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-11T00:36:46.892-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "172.16.0.32/28"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cymbal-coffee-infra-867184/global/firewalls/test-gke-node-allow-egress-1f136973",
            "log_config": [],
            "name": "test-gke-node-allow-egress-1f136973",
            "network": "https://www.googleapis.com/compute/v1/projects/cymbal-coffee-infra-867184/global/networks/network-1",
            "priority": 200,
            "project": "cymbal-coffee-infra-867184",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cymbal-coffee-infra-867184/global/firewalls/test-gke-node-allow-egress-1f136973",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [
              "test-cluster-1f136973@cymbal-coffee-infra-867184.iam.gserviceaccount.com"
            ],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_service_account_access_token.default",
            "google_compute_network.vpc-network",
            "google_project.cymbal-infra-project",
            "google_service_account.service_account",
            "random_id.postfix",
            "random_integer.project_salt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress-allow-gke-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "9443",
                  "10250",
                  "15017",
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-11T00:36:47.050-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cymbal-coffee-infra-867184/global/firewalls/test-gke-node-allow-ingress-1f136973",
            "log_config": [],
            "name": "test-gke-node-allow-ingress-1f136973",
            "network": "https://www.googleapis.com/compute/v1/projects/cymbal-coffee-infra-867184/global/networks/network-1",
            "priority": 200,
            "project": "cymbal-coffee-infra-867184",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cymbal-coffee-infra-867184/global/firewalls/test-gke-node-allow-ingress-1f136973",
            "source_ranges": [
              "172.16.0.32/28"
            ],
            "source_service_accounts": [
              "test-cluster-1f136973@cymbal-coffee-infra-867184.iam.gserviceaccount.com"
            ],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_service_account_access_token.default",
            "google_compute_network.vpc-network",
            "google_project.cymbal-infra-project",
            "google_service_account.service_account",
            "random_id.postfix",
            "random_integer.project_salt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/cymbal-coffee-infra-867184/global/networks/network-1",
            "mtu": 0,
            "name": "network-1",
            "project": "cymbal-coffee-infra-867184",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cymbal-coffee-infra-867184/global/networks/network-1"
          },
          "dependencies": [
            "data.google_service_account_access_token.default",
            "google_project.cymbal-infra-project",
            "random_integer.project_salt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2022-03-11T00:36:47.142-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/cymbal-coffee-infra-867184/regions/europe-west2/routers/test-nat-rtr",
            "name": "test-nat-rtr",
            "network": "https://www.googleapis.com/compute/v1/projects/cymbal-coffee-infra-867184/global/networks/network-1",
            "project": "cymbal-coffee-infra-867184",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cymbal-coffee-infra-867184/regions/europe-west2/routers/test-nat-rtr"
          },
          "dependencies": [
            "data.google_service_account_access_token.default",
            "google_compute_network.vpc-network",
            "google_project.cymbal-infra-project",
            "random_integer.project_salt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "cymbal-coffee-infra-867184/europe-west2/test-nat-rtr/test-nat-gw",
            "min_ports_per_vm": 0,
            "name": "test-nat-gw",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "cymbal-coffee-infra-867184",
            "region": "europe-west2",
            "router": "test-nat-rtr",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/cymbal-coffee-infra-867184/regions/europe-west2/subnetworks/subnet-euw2",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "data.google_service_account_access_token.default",
            "google_compute_network.vpc-network",
            "google_compute_router.nat_router",
            "google_compute_subnetwork.consumer-subnet",
            "google_project.cymbal-infra-project",
            "random_integer.project_salt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "consumer-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-11T00:36:47.426-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/cymbal-coffee-infra-867184/regions/europe-west2/subnetworks/subnet-euw2",
            "ip_cidr_range": "10.1.0.0/22",
            "name": "subnet-euw2",
            "network": "https://www.googleapis.com/compute/v1/projects/cymbal-coffee-infra-867184/global/networks/network-1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cymbal-coffee-infra-867184",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.192.0.0/14",
                "range_name": "gke-test-cluster-1f136973-pods-b9f77965"
              },
              {
                "ip_cidr_range": "10.196.0.0/20",
                "range_name": "gke-test-cluster-1f136973-services-b9f77965"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cymbal-coffee-infra-867184/regions/europe-west2/subnetworks/subnet-euw2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "data.google_service_account_access_token.default",
            "google_compute_network.vpc-network",
            "google_project.cymbal-infra-project",
            "random_integer.project_salt"
          ]
        }
      ]
    }
  ]
}